objects/Lawsuit_Package_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Fall</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Klagepakete</relationshipLabel>
        <relationshipName>Lawsuit_Package_Referencies</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lawsuit_Package__c</fullName>
        <label>Klagepaket</label>
        <referenceTo>Lawsuit_Package__c</referenceTo>
        <relationshipLabel>Fälle</relationshipLabel>
        <relationshipName>Lawsuit_Package_Referencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Klagepaketreferenz_ID__c</fullName>
        <label>Old Klagepaketreferenz ID</label>
        <type>TextArea</type>
    </fields>
    <label>Klagepaketreferenz</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klagepaketreferenzen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>